add scaffold products, add content to pages, finish project

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,13 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<div class='row'>
+  <div class='col-md-5'>
+    <h3> Hello World!</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, ab.</p>
+  </div>
+  <div class='col-md-5'>
+    <h3> Hello World!</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, asperiores?</p>
+  </div>
+</div>
